// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RedisRunner should create unique instances 1`] = `
RedisRunner {
  "containerId": "",
  "createResponsivenessCheckCmd": [Function],
  "getComposeService": [Function],
  "initializer": "",
  "logger": Logger {
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "runnerService": "r1",
    "runnerSymbol": "🦇 ",
    "setRunnerSymbol": [Function],
    "warn": [Function],
  },
  "runnerConfig": Object {
    "build": "",
    "commands": Array [],
    "connectionTimeout": 5,
    "dependsOn": Array [],
    "host": "localhost",
    "image": "some/image:123",
    "networks": undefined,
    "password": "",
    "ports": Object {
      "6379": "6379",
    },
    "props": Object {},
    "responsivenessTimeout": 30,
    "service": "r1",
  },
}
`;

exports[`RedisRunner should create unique instances 2`] = `
RedisRunner {
  "containerId": "",
  "createResponsivenessCheckCmd": [Function],
  "getComposeService": [Function],
  "initializer": "",
  "logger": Logger {
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "runnerService": "r2",
    "runnerSymbol": "🦇 ",
    "setRunnerSymbol": [Function],
    "warn": [Function],
  },
  "runnerConfig": Object {
    "build": "",
    "commands": Array [],
    "connectionTimeout": 5,
    "dependsOn": Array [],
    "host": "localhost",
    "image": "some/image:123",
    "networks": undefined,
    "password": "",
    "ports": Object {
      "6379": "6379",
    },
    "props": Object {},
    "responsivenessTimeout": 30,
    "service": "r2",
  },
}
`;
